# cross-review

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.sopify-skills/: project.md
.sopify-skills/blueprint/: README.md  background.md  design.md  tasks.md
.sopify-skills/plan/20260420_crossreview_v0_prompt_lab/: background.md  design.md  tasks.md
.sopify-skills/plan/20260425_crossreview_product_master_plan/: background.md  design.md  tasks.md
.sopify-skills/user/: preferences.md
crossreview/: __init__.py  cli.py  ingest.py  reviewer.py  schema.py  verify.py
crossreview/core/: prompt.py
docs/: dogfood-convention.md  v0-scope.md
fixtures/: README.md
prompt-lab/: README.md  prompt-template.md  run.py  summary.md
prompt-lab/cases/001-hermes-subshell-leak/: adjudication.yaml  diff.patch  manual-findings.yaml  pack.json  run-r4.json
prompt-lab/cases/002-helloagents-codex-config/: adjudication.yaml  diff.patch  manual-findings.yaml  pack.json
prompt-lab/cases/003-crossreview-review-fixes/: adjudication.yaml  diff.patch  manual-findings.yaml  pack.json
prompt-lab/cases/004-graphify-download-badge/: adjudication.yaml  diff.patch  manual-findings.yaml  pack.json
prompt-lab/cases/005-hermes-patch-hardening/: diff.patch  manual-findings.yaml  pack.json
prompt-lab/cases/006-helloagents-cleanup-path/: diff.patch  manual-findings.yaml  pack.json
prompt-lab/cases/007-graphify-pipx-readme/: diff.patch  pack.json  (+1 more)
tests/: test_cli.py  test_formatter.py  test_prompt_lab_run.py  test_reviewer.py  test_schema.py  test_verify.py
(+18 files in other folders)
