[project]
name = "crossreview"
version = "0.1.0a2"
description = "Context-isolated verification harness for AI-generated code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
anthropic = [
    "anthropic>=0.34",
]
dev = [
    "pytest",
    "ruff",
    "pyyaml",
]

[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
crossreview = "crossreview.cli:_entry_point"

[tool.setuptools.packages.find]
include = ["crossreview*"]
